--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
             </p>
         </div>
 
+        <section class="footer">
+            <h3> ©2023 Sikholiwe Sibisi</h3>
+            </div>
 
-
-    </section>
+        </section>
 
 </body>
 
